@@ -6,6 +6,8 @@
   files in red could not be updated by exiftool
   files in orange could not be saved in the backup folder
 
+* new right-click menu option -- Show in Finder
+
 ## GeoTag 4.8
 
 ### New Feature
